src/styles.scss
.removecaret.dropdown-toggle::after {
    display: none;
}

.dropdown-toggle::after {
    -webkit-transform: translateY(2px);
    -moz-transform: translateY(2px);
    -ms-transform: translateY(2px);
    -o-transform: translateY(2px);
    transform: translateY(2px);
}

.error-background {
    background-color: rgba(255, 23, 45, 0.12);
}

.borderless-dropdown {
    border-width: 0;
    outline: none;
}

.small-caps {
    font-variant: small-caps;
}

.modal-content {
    background-color: rgb(235, 235, 235);
}

.modal-header {
    border-bottom: 1px solid rgb(210, 210, 210);
}

button:active {
    outline: none;
}

.popover {
    font-family: inherit;
}

